# pokedex

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  jsconfig.json  jsonconfig.json
backend/: README.md  pyproject.toml  setup.py
backend/app/: main.py
backend/db/: database.py
backend/db/migrations/: alembic.ini  env.py
backend/db/migrations/versions/: pokemon_cache_table.py
backend/db/models/: pokemon_cache.py  search_history.py
backend/mcp-server/app/: mcp-service.py
backend/mcp_server/app/: mcp_service.py  pokeapi_mcp_server.py
backend/web-service/app/: service.py
backend/web_service/app/: service.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.css  App.jsx  theme.js
frontend/src/components/: CameraView.jsx  FAQ.jsx  Footer.jsx  LoadingAnimation.jsx  PokedexLeft.jsx  PokedexRight.jsx  PokemonDisplay.jsx  SectionTabs.jsx  SpeechControls.jsx
frontend/src/hooks/: usePokemonCry.jsx  useSpeechRecognition.jsx  useSpeechSynthesis.jsx
frontend/src/utils/: spriteUtils.js
